--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div class="footer">
         Source from <a href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683" target="_blank">api.covid19api.com</a>
         <br>
-        Designed by <a href="github" target="_blank">Preeti Sahani</a>
+        Designed by <a href="https://preetisahani16.github.io/COVID-19_LIVE_DASHBOARD/" target="_blank">Preeti Sahani</a>
     </div>
     <!-- end footer -->
 
